fix/add routes to swagger and correct some fonction which return bad things
